@@ -4,6 +4,9 @@ import com.itextpdf.kernel.pdf.PdfDocument;
 import com.itextpdf.kernel.pdf.PdfWriter;
 import com.itextpdf.layout.Document;
 import com.itextpdf.layout.element.Paragraph;
+import org.example.backend.model.Book;
+import org.example.backend.model.BookSummaryDTO;
+import org.example.backend.repository.BookRepository;
 import org.example.backend.service.BookInfoService;
 import org.example.backend.service.HuggingFaceSummarizer;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -17,6 +20,8 @@ import java.io.IOException;
 @RestController
 @RequestMapping("/api")
 public class SummarizerController {
+    @Autowired
+    private BookRepository BookRepository;
 
     @Autowired
     private HuggingFaceSummarizer summarizer;
@@ -33,17 +38,18 @@ public class SummarizerController {
     }
 
     @PostMapping("/summarize/pdf")
-    public ResponseEntity<String> summarizePdf(@RequestParam("file") MultipartFile file) {
+    public ResponseEntity<BookSummaryDTO> summarizePdf(@RequestParam("file") MultipartFile file) {
         try {
-            // 1. Extract title and author
+
             BookInfoService.BookInfo bookInfo = bookInfoService.extractTitleAndAuthorFromPdf(file);
             System.out.println("Extracted Title: " + bookInfo.title);
             System.out.println("Extracted Author: " + bookInfo.author);
 
             // 2. Summarize the PDF
             String summary = summarizer.summarizePdf(file);
-            if (summary == null || summary.trim().isEmpty()) {
-                return ResponseEntity.badRequest().body("No summary generated from the PDF");
+            if (summary == null || summary.isBlank()) {
+                return ResponseEntity.badRequest()
+                        .body(new BookSummaryDTO("", "", "No summary could be generated."));
             }
 
             // 3. Create a PDF with title, author, and summary
@@ -62,11 +68,20 @@ public class SummarizerController {
             document.close();
 
             // 4. Return the summary in response
-            return ResponseEntity.ok(summary);
+            Book saved = new Book();
+            saved.setTitle(bookInfo.title);
+            saved.setAuthor(bookInfo.author);
+            saved.setContent(summary);
+            BookRepository.save(saved);
+
+            BookSummaryDTO dto = new BookSummaryDTO(bookInfo.title, bookInfo.author, summary);
+
+            return ResponseEntity.ok(dto);
+
 
         } catch (IOException | InterruptedException e) {
-            return ResponseEntity.internalServerError()
-                    .body("Error processing PDF: " + e.getMessage());
+            return ResponseEntity.badRequest()
+                    .body(new BookSummaryDTO("", "", "Error processing PDF"));
         }
     }
 }
